[package]
name = "robusta_jni"
version = "0.0.3"
authors = ["Giovanni Berti <dev.giovanniberti@gmail.com>"]
repository = "https://github.com/giovanniberti/robusta"
description = "Easy interop between Rust and Java"
keywords = ["ffi", "jni", "java"]
license = "MIT"
edition = "2018"
readme = "README.md"
categories = ["development-tools::ffi", "api-bindings"]
exclude = ["/robusta-codegen", "/robusta-example", "README.md"]
documentation = "https://docs.rs/robusta/"

[dependencies]
robusta-codegen = { version = "0.0.3", path = "./robusta-codegen" }
jni = "0.17.0"
paste = "1.0.0"

[dev-dependencies]
native = { path = "./tests/driver/native" }

[workspace]
members = ["robusta-codegen", "robusta-example", "tests/driver/native"]