[package]
name = "robusta_jni"
version = "0.2.2"
authors = ["Giovanni Berti <dev.giovanniberti@gmail.com>"]
repository = "https://github.com/giovanniberti/robusta"
description = "Easy interop between Rust and Java"
keywords = ["ffi", "jni", "java"]
license = "MIT"
edition = "2018"
readme = "README.md"
categories = ["development-tools::ffi", "api-bindings"]
exclude = ["/robusta-codegen", "/robusta-example", "README.md", "/robusta-android-example"]
documentation = "https://docs.rs/robusta/"

[dependencies]
robusta-codegen = { version = "0.2", path = "./robusta-codegen" }
jni = "^0.20"
paste = "^1"
static_assertions = "^1"
constcat = "0.4.0"
duplicate = "1.0.0"

[dev-dependencies]
native = { path = "./tests/driver/native" }
jni = { version = "^0.20", features = ["invocation"] }

[workspace]
members = ["robusta-codegen", "robusta-example", "tests/driver/native", "robusta-android-example"]
