[package]
name = "robusta-codegen"
version = "0.0.1"
authors = ["Giovanni Berti <dev.giovanniberti@gmail.com>"]
description = "Procedural macro crate to support `robusta`"
keywords = ["proc_macro", "procmacro", "robusta"]
edition = "2018"
categories = ["development-tools::ffi", "api-bindings"]

[lib]
proc-macro = true

[features]
no_jni = []

[dependencies]
quote = "1"
proc-macro2 = "1.0.21"
syn = { version = "1.0", features = ["full", "visit", "fold"] }
proc-macro-error = { version = "1", default-features = false }
rand = "0.7.3"