[package]
name = "robusta-codegen"
version = "0.2.0"
authors = ["Giovanni Berti <dev.giovanniberti@gmail.com>"]
description = "Procedural macro crate to support `robusta`"
keywords = ["proc_macro", "procmacro", "robusta"]
edition = "2018"
categories = ["development-tools::ffi", "api-bindings"]
license = "MIT"
repository = "https://github.com/giovanniberti/robusta/robusta-codegen"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = { version = "1.0.21", features = ["span-locations"]}
syn = { version = "1.0", features = ["visit", "fold", "derive"] }
proc-macro-error = { version = "1", default-features = false }
rand = "0.7.3"
darling = "0.14.4"
Inflector = "0.11.4"
